# scPilot

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  cancer_scrnaseq_annotation_strategy.md  environment.yml  error_log.md  pyproject.toml  scpilot_codex_current_issues.md  scpilot_issue_resolution_plan.md  scpilot_plan.md  scrna_agent_plan.md
.claude/agents/: llm-agent-builder.md  mcp-integration-tester.md  project-scaffolder.md  pytest-harness-writer.md  reproducibility-auditor.md  reproducibility-harness-builder.md  scanpy-tool-builder.md  scrna-analyst.md
scpilot/: __init__.py  __main__.py  cli.py  doctor.py  mcp_server.py  params.py  recipes.py  repro.py  schemas.py  scriptgen.py  session.py  tools.py  validate.py
scpilot/core/: de.py  (+21 more)
tests/: test_annotate.py  test_audit.py  test_audit_export.py  test_benchmark_best_embedding.py  test_benchmark_reference.py  test_cli_provider.py  test_cnv.py  test_compartment.py  test_configure_run.py  test_decision_recipe_hash_join.py  test_drop_noisy_cells.py  test_export_final.py  test_fine_annotate.py  test_hardening.py  test_harness_chokepoints.py  test_ingest.py  test_integrate.py  test_integrate_defaults.py  test_io_state.py  test_llm_agent.py  test_mcp_jobs.py  test_mcp_server.py  test_params.py  test_plots.py  test_preprocess_cluster_markers.py  test_provenance_gap.py  test_provider_retry.py  test_qc.py  test_repro.py  test_resolution_separability.py  test_schemas.py  test_scriptgen_equivalence.py  test_session.py  test_session_input_guard.py  test_species_ensembl.py  test_tier4_scale.py  test_tools.py
(+5 files in other folders)
